[package]
name = "async-chat"
version = "0.1.0"
authors = ["Oscar Sanchez <oscar.sanchez@savne.net>"]
edition = "2018"

[dependencies]
async-std = {version = "1.7", features = ["unstable"] }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
